# Realm-Fabric

./: .env.example  LONG_TERM_GOALS.md  README.md  pyproject.toml  test_schema.py
.github/workflows/: ci.yml
campaign_rpg_engine/: __init__.py  action_outcome.py  agent.py  area.py  area_edit.py  area_edit_parse.py  area_templates.py  compound_arg_parse.py  coordinate_mode.py  coordinates.py  decoration.py  decoration_edit.py  emote_phrasing.py  entity_templates.py  game_profile.py  grid.py  interact_templates.py  memory.py  move_target.py  object.py  object_action.py  observations.py  occupancy.py  pathfinding.py  pathing.py  perception.py  prompt_blocks.py  prompt_template.py  reserved_names.py  session.py  session_area_edit.py  session_persistence.py  simulation.py  snapshot.py  triggers.py  turn_record.py  vision_bearing.py  world_edit_api.py
campaign_rpg_engine/actions/: __init__.py  emote.py  interact.py  move.py  speak.py
campaign_rpg_engine/edit/: __init__.py  area_edit.py  area_edit_parse.py  decoration_edit.py  field_appliers.py  session_area_edit.py  world_edit_api.py
campaign_rpg_engine/events/: registry.py
campaign_rpg_engine/interaction_handlers/: __init__.py  base.py  registry.py
campaign_rpg_engine/llm/: __init__.py  affinity_update.py  client.py  memory_summary.py  prompt.py  prompt_context.py  schemas.py  text_truncation.py  token_estimate.py  types.py
campaign_rpg_engine/log_utils/: __init__.py  logger.py
campaign_rpg_engine/lorebook/: __init__.py  factory.py  import_st.py  listing.py  matcher.py  models.py  scan_config.py
campaign_rpg_engine/memory_modules/: __init__.py  affinity.py  affinity_ladder.py  base.py  consolidation_hooks.py  consolidation_runner.py  loader.py  recent_turns.py  registry.py  rolling_summary.py  salient_turns.py  serialization.py
campaign_rpg_engine/prompt_slots/: registry.py
campaign_rpg_engine/templates/: __init__.py  area_templates.py  entity_templates.py
campaign_rpg_engine/turn_verbs/: __init__.py  phases.py  registry.py
campaign_rpg_engine/utils/: __init__.py
docs/: MIGRATION-0.7-to-1.0.md  MIGRATION-realm-fabric-to-campaign-rpg-engine.md  README.md  ROADMAP.md  cli.md  releasing.md  v0-implementation-readiness-checklist.md  v0.1-implementation-readiness-checklist.md  v0.2-implementation-readiness-checklist.md  v0.2.5-changelog.md  v0.3.0-changelog.md  v0.3.1-changelog.md  v0.3.2-changelog.md  v0.4.0-changelog.md  v0.4.1-changelog.md  v0.4.3-changelog.md  v0.4.4-changelog.md  v0.5.0-changelog.md  v0.6.0-changelog.md
docs/UML/: 01-system-overview.md  02-session-turn-flow.md  03-package-layout.md  04-edit-mutation-stack.md  AUDIT-1.6.0.md  README.md
docs/changelog/: README.md  v0-implementation-readiness-checklist.md  v0.1-implementation-readiness-checklist.md  v0.2-implementation-readiness-checklist.md  v0.2.5-changelog.md  v0.3.0-changelog.md  v0.3.1-changelog.md  v0.3.2-changelog.md  v0.4.0-changelog.md  v0.4.1-changelog.md  v0.4.2-changelog.md  v0.4.3-changelog.md  v0.4.4-changelog.md  v0.4.5-changelog.md  v0.4.6-changelog.md  v0.5.0-changelog.md  v0.6.0-changelog.md  v0.6.1-changelog.md  v0.7.0-changelog.md  v0.7.1-changelog.md  v0.7.2-changelog.md  v1.0.0-changelog.md  v1.3.0-changelog.md  v1.3.1-changelog.md  v1.5.0-changelog.md  v1.5.1-changelog.md  v1.5.2-changelog.md  v1.6.0-changelog.md  v1.6.1-changelog.md  v1.7.2-changelog.md  v1.7.3-changelog.md
docs/guides/: README.md  api-reference.md  building-on-campaign-rpg-engine.md  building-on-realm-fabric.md  cli.md  handlers.md  memory-and-lorebooks.md  overview.md  persistence.md  turns.md
docs/schemas/: AgentActionTurn.py  AgentCompoundTurn.py  AgentNavigationTurn.py  AgentTurn.py  README.md
examples/: README.md
examples/lorebook/: README.md  campaign-rpg-engine-demo.lorebook.json
examples/minimal-server/: README.md  pyproject.toml
examples/web/realm-studio/: README.md  pyproject.toml
examples/web/realm-studio/backend/: app.py  area_api.py  lorebooks_api.py  memory_modules_api.py  prompt_api.py  schemas.py  session_store.py  snapshot_compat.py  turn_runner.py
examples/web/realm-studio/frontend/: api.js  app.js  index.html  lorebooks.js  panels.js  promptLayout.js  snapshot.js  styles.css  ui.js
examples/web/realm-studio/tests/: test_api.py  test_snapshot_compat.py
profiles/default_compound/: few_shots.txt  template.txt
realm_fabric/: __init__.py
src/: __init__.py  agent.py  area.py  area_edit.py  area_event.py  compound_stepper.py  coordinates.py  game_profile.py  grid.py  main.py  memory.py  move_target.py  object.py  object_action.py  object_effects.py  observations.py  occupancy.py  pathfinding.py  pathing.py  perception.py  prompt_blocks.py  session.py  session_area_edit.py  session_persistence.py  simulation.py  snapshot.py  world.py  world_edit.py  world_edit_api.py
src/actions/: __init__.py  interact.py  move.py  speak.py
src/llm/: __init__.py  client.py  memory_summary.py  prompt.py  prompt_context.py  schemas.py  token_estimate.py  types.py
src/logging/: __init__.py
src/lorebook/: __init__.py  (+7 more)
tests/: conftest.py  test_action_enabled_and_sequence.py  test_affinity_json_repair.py  test_affinity_memory.py  test_area.py  test_area_config.py  test_area_edit.py  test_area_events.py  test_area_templates.py  test_compound_turn.py  test_concurrency_limit_error.py  test_concurrent_turn_during_consolidation.py  test_consolidation_hooks.py  test_consolidation_identity.py  test_coordinate_mode.py  test_coordinate_move.py  test_custom_memory_modules.py  test_decorations.py  test_emote.py  test_entity_templates.py  test_error_logging_context.py  test_game_profile.py  test_hidden_objects.py  test_interact_path_move_step.py  test_interact_pathing.py  test_interact_templates.py  test_interaction_handlers.py  test_llm_client.py  test_lorebook_factory.py  test_lorebook_import.py  test_lorebook_matcher.py  test_lorebook_scan_config.py  test_lorebook_st_defaults.py  test_memory_modules.py  test_move_area_effect.py  test_move_messages.py  test_move_pathing.py  test_move_target.py  test_movement_blocking.py  test_multi_agent.py  (+28 more)
(+26 files in other folders)
