[project]
name = "realm-fabric"
version = "0.7.0"
description = "Grid-based LLM agent simulation engine — Session API, multi-area worlds, tactical movement, compound turns, pluggable memory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic",
    "openai",
    "rich",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[project.scripts]
realm = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "realm_fabric"]

[tool.hatch.build.targets.wheel.force-include]
"profiles" = "profiles"

[tool.uv]
package = true
