[project]
name = "campaign-rpg-engine"
version = "1.5.2"
description = "CampAIgn — map-based LLM RPG simulation engine (Session API, multi-area worlds, compound turns)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "DaveH-Ghost", email = "davidhall.a27@gmail.com" },
]
keywords = [
    "llm",
    "agents",
    "simulation",
    "game-engine",
    "grid",
    "campaign",
    "rpg",
    "roleplay",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic",
    "openai",
    "rich",
    "python-dotenv",
]

[project.urls]
Homepage = "https://github.com/DaveH-Ghost/CampAIgn-RPG-Engine"
Documentation = "https://github.com/DaveH-Ghost/CampAIgn-RPG-Engine/blob/main/docs/README.md"
Repository = "https://github.com/DaveH-Ghost/CampAIgn-RPG-Engine"
Issues = "https://github.com/DaveH-Ghost/CampAIgn-RPG-Engine/issues"
Changelog = "https://github.com/DaveH-Ghost/CampAIgn-RPG-Engine/blob/main/docs/changelog/README.md"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["campaign_rpg_engine"]

[tool.hatch.build.targets.wheel]
force-include = { "profiles" = "profiles" }

[tool.hatch.build.targets.sdist]
include = [
    "/profiles",
]
force-include = { "profiles" = "profiles" }

[tool.uv]
package = true
