[project]
name = "campaign-rpg-engine"
version = "1.6.1"
description = "CampAIgn — map-based LLM RPG simulation engine (Session API, multi-area worlds, compound turns)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "DaveH-Ghost", email = "davidhall.a27@gmail.com" },
]
keywords = [
    "llm",
    "agents",
    "simulation",
    "game-engine",
    "grid",
    "campaign",
    "rpg",
    "roleplay",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic",
    "openai",
    "rich",
    "python-dotenv",
]

[project.urls]
Homepage = "https://github.com/DaveH-Ghost/CampAIgn-RPG-Engine"
Documentation = "https://github.com/DaveH-Ghost/CampAIgn-RPG-Engine/blob/main/docs/README.md"
Repository = "https://github.com/DaveH-Ghost/CampAIgn-RPG-Engine"
Issues = "https://github.com/DaveH-Ghost/CampAIgn-RPG-Engine/issues"
Changelog = "https://github.com/DaveH-Ghost/CampAIgn-RPG-Engine/blob/main/docs/changelog/README.md"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.22",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["campaign_rpg_engine"]

[tool.hatch.build.targets.wheel]
force-include = { "profiles" = "profiles" }

[tool.hatch.build.targets.sdist]
include = [
    "/profiles",
]
force-include = { "profiles" = "profiles" }

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["campaign_rpg_engine", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM102", "SIM105", "SIM108", "SIM110", "SIM115", "SIM401", "B017", "B905"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]
"campaign_rpg_engine/__init__.py" = ["F401", "F403"]
"campaign_rpg_engine/prompt_blocks.py" = ["E402"]
"campaign_rpg_engine/log_utils/__init__.py" = ["F401"]
"campaign_rpg_engine/area_edit.py" = ["E402"]
"campaign_rpg_engine/world_edit_api.py" = ["E402"]
"campaign_rpg_engine/entity_templates.py" = ["E402"]
"campaign_rpg_engine/area_templates.py" = ["E402"]
"campaign_rpg_engine/interact_templates.py" = ["E402"]
"campaign_rpg_engine/session_area_edit.py" = ["E402"]
"campaign_rpg_engine/decoration_edit.py" = ["E402"]
"campaign_rpg_engine/area_edit_parse.py" = ["E402"]
