[project]
name = "realm-studio"
version = "0.4.0"
description = "Example web UI for Realm-Fabric (realm-studio)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "realm-fabric",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "httpx>=0.28.0",
]

[project.scripts]
realm-studio = "backend.main:main"

[tool.uv.sources]
realm-fabric = { path = "../../..", editable = true }

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.uv]
package = true
